install dependencies for react ui

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-instantsearch": "^6.5.0",
+    "react-instantsearch-dom": "^6.5.0",
+    "react-scripts": "3.4.1",
+    "rheostat": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
