--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://jpqy.github.io/mintbean-careerhack-algolia"
+  "homepage": "http://jpqy.github.io/mintbean-careerhack-algolia",
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
