--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mintbean-algolia",
+  "name": "algolia-pokedex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +12,7 @@
     "react-dom": "^16.13.1",
     "react-instantsearch": "^6.5.0",
     "react-instantsearch-dom": "^6.5.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "rheostat": "^4.1.1"
   },
   "scripts": {
@@ -38,7 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://jpqy.github.io/mintbean-careerhack-algolia",
+  "homepage": ".",
   "devDependencies": {
     "gh-pages": "^3.0.0"
   }
