--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "algolia:import": "node bin/algolia/1-importPokemonDataset.js",
+    "algolia:config": "node bin/algolia/2-configurePokemonDataset.js"
   },
   "eslintConfig": {
     "extends": "react-app"
